# cdqt_vcpkg

./: CMakeLists.txt  Doxyfile  Install.md  Machines.rar  Readme.md  checkdoseqt.cpp  checkdoseqt.h  checkdoseqt.ui  main.cpp  nohup.out  sample.dcm  vcpkg.json
.github/workflows/: cmake.yml
standard/: info.json
tuberosum_tools/: fried_tools.h  peel_wrappers.h  potato_linac.cpp  potato_linac.h  puree_math.cpp  puree_math.h
